samedi soir pour tester heroku update

--- a/src/main/webapp/landing.xhtml
+++ b/src/main/webapp/landing.xhtml
@@ -44,12 +44,10 @@
                        <span class="fa fa-bars"></span>
                     </a>
                     <ul id="menu" class="animated">
-                       <li><a href="#"><span>Home</span></a></li>
                        <li><a href="#introduction"><span>Introduction</span></a></li>
-                       <li><a href="#features"><span>Features</span></a></li>
-                       <li><a href="#promotion"><span>Promotion</span></a></li>
-                       <li><a href="#pricing"><span>Pricing</span></a></li>
-                       <li><a href="#video"><span>Video</span></a></li>
+                       <li><a href="#features"><span>Ce que nous proposons</span></a></li>
+                       <li><a href="#promotion"><span>Nos abonnements</span></a></li>
+                       <li><a href="#video"><span>Qui sommes-nous</span></a></li>
                     </ul>
                 </div>
                 
